# procapi

dotnet-procapi/: ProcAPI.csproj  ProcAPI.sln  Program.cs  Startup.cs
dotnet-procapi/Contracts/: BackendMessage.cs  InputData.cs  OutputData.cs
dotnet-procapi/Controllers/: ErrorController.cs  PredictionController.cs
dotnet-procapi/Preprocessors/: IPreprocessor.cs  InputPreprocessor.cs  OutputPreprocessor.cs
dotnet-procapi/Properties/: launchSettings.json
dotnet-procapi/Utils/: Either.cs
python-procapi/: main.py  requirements.txt
python-procapi/Contracts/: BackendMessage.py  InputData.py  OutputData.py
python-procapi/Preprocessors/: IPreprocessor.py  InputPreprocessor.py  OutputPreprocessor.py
python-procapi/Routers/: prediction.py
python-procapi/Utils/: parsers.py
rust_procapi/: Cargo.toml
rust_procapi/src/: contracts.rs  controllers.rs  main.rs  preprocessors.rs
rust_procapi/src/contracts/: backend_message.rs  input_data.rs  output_data.rs
rust_procapi/src/controllers/: prediction_controller.rs
rust_procapi/src/controllers/prediction_controller/: controller.rs  methods.rs
rust_procapi/src/preprocessors/: input_preprocessor.rs  output_preprocessor.rs  traits.rs
